# Threelacha

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: issue_template.md  task.md
airflow/: Dockerfile
airflow/dags/: make_silver_schema_ap1.py  master_pipeline.py  raw_api13_collect_weekly.py  raw_api17_collect_backfill.py  raw_api17_collect_daily.py  raw_api1_collect_backfill.py  raw_api1_collect_daily.py  run_dbt_transform_gold.py  schema_register_silver_api1.py  schema_register_silver_api10.py  silver_api17_transform_daily.py  silver_api1_transform_daily.py  test_minio_conn.py  test_minio_connection.py  test_trino_conn.py
airflow/plugins/: connection_utils.py  country_code.json  daily_collector.py  eco_api_params.json  metadata_loader_utils.py  preprocessing.py
dbt/: Dockerfile  profiles.yml
dbt/Threelacha/: dbt_project.yml
dbt/Threelacha/models/: sources.yml
dbt/Threelacha/models/gold/: api13_price_statistics_by_category.sql  api17_channel_comparison.sql  api17_region_comparison.sql  stg_daily_product_price.sql  test_gold.sql
docs/convention/: flow.md
hive/: Dockerfile  core-site.xml  entrypoint.sh
streamlit/: app.py  requirements.txt
streamlit/components/: channel_cards.py  eco_page.py  region_map.py
streamlit/data/: athena_connection.py  trino_connection.py
streamlit/data/queries/: channel_queries.py  eco_queries.py  region_queries.py
trino/catalog/: hive.properties
